--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
-    "next": "10.1.3",
+    "next": "^10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "^6.0.1"
+    "react-markdown": "^6.0.1",
+    "react-syntax-highlighter": "^15.4.3"
   }
 }
